# audioProcessor

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  absolute_agony.sln  build.sh  build_run.sh  git-auto-pull.service  run.sh
.ssh/: config
absolute_agony/: AudioFileParse.cpp  AudioFileParse.h  AudioUploader.cpp  CMakeLists.txt  FFTProcessor.cpp  FFTProcessor.h  WebSocketClient.cpp  WebSocketClient.h  absolute_agony.cpp  absolute_agony.vcxproj  absolute_agony.vcxproj.filters  utils.h
include/: AudioUploader.h  FFTProcessor.h  WebSocketClient.h  utils.h
src/: AudioFileParse.cpp  AudioUploader.cpp  FFTProcessor.cpp  WebSocketClient.cpp  absolute_agony.cpp  to-do.txt
